<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.campbell.gasprice.MainActivity" >

    <EditText
        android:id="@+id/input_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/us_price_hint" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onSelCountry"
            android:text="@string/US" />

        <RadioButton
            android:id="@+id/radio_can"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSelCountry"
            android:text="@string/CAN" />
    </RadioGroup>

    <Button
        android:id="@+id/convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/convert"
        android:onClick="calcConversion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/moneyValueLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:text="Total Canadian $" />

        <TextView
            android:id="@+id/moneyValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".65"
            android:hint="@string/can_price_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:text="Total Litres " />

        <TextView
            android:id="@+id/litres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".65"
            android:text="3.78541" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/calc_price_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:text="Cost Canadian $/litre" />

        <TextView
            android:id="@+id/calc_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".65" />
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>